public_name takes over first_name/last_name in user profile.
from now on first_name and last_name are considered trusted, and are set by us, after verification from documents.
- minor improvements to user profile editing
- changes in multiple templates to reflect the public_name field name change.

--- a/app/views/application_mailer/ad_is_published.html.erb
+++ b/app/views/application_mailer/ad_is_published.html.erb
@@ -1,5 +1,5 @@
 <p>
-  Hei, <%= @user.first_name %>
+  Hei, <%= @user.public_name %>
 </p>
 <p>
   Din annonse (<%= link_to ad.title, ad_url %>) på <%= link_to 'Plendit.no', root_url %> er nå godkjent og publisert.
