--- a/app/views/application_mailer/user_id_license_expires_soon.html.erb
+++ b/app/views/application_mailer/user_id_license_expires_soon.html.erb
@@ -1,5 +1,5 @@
 <p>
-  Hei, <%= @user.first_name %>
+  Hei, <%= @user.public_name %>
 </p>
 <p>
   Ditt ****<%#= foobar %>-kort har gått ut på dato og er ikke lengre gyldig.
