--- a/app/views/backstage/kyc_document.html.erb
+++ b/app/views/backstage/kyc_document.html.erb
@@ -19,7 +19,15 @@
                 </div>
 
                 <div>
-                    Navn: <%= u.display_full_name %>
+                    Offentlig Navn: <%= u.public_name %>
+                </div>
+
+                <div>
+                    Navn (display_full_name): <%= u.display_full_name %>
+                </div>
+
+                <div>
+                    Navn (name): <%= u.name %>
                 </div>
 
                 <div>
