--- a/app/views/users/_edit_registration.html.erb
+++ b/app/views/users/_edit_registration.html.erb
@@ -29,6 +29,14 @@
             </div>
         </div>
 
+        <div class="row">
+            <small>
+                Dersom du opprettet bruker med med Facebook, Google eller SPiD så trenger du ikke et eget Plendit passord.
+                Hvis du ønsker et passord til din konto eller vil bytte og ikke har det gamle tilgjengelig,
+                kan du logge ut og be om nytt passord. PS: Din epost må være verifisert.
+            </small>
+        </div>
+
     <% end %>
 <% end %>
 
