--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,7 +1,7 @@
 <h2 style='font-style: normal;font-weight: 700;Margin-bottom: 0;Margin-top: 0;font-size: 24px;line-height: 32px;font-family: "Lato",sans-serif;color: #44a8c7;text-align: left;'><span style="color:#2a96ff">Tilbakestilling av Plendit-passord</span></h2>
 
 <p style='font-style: normal;font-weight: 400;Margin-bottom: 10px;Margin-top: 16px;font-size: 15px;line-height: 24px;font-family: "Lato",sans-serif;color: #60666d;text-align: left;'>
-    Hei <%= @resource.first_name %>.
+    Hei <%= @resource.public_name %>.
 </p>
 
 <p style='font-style: normal;font-weight: 400;Margin-bottom: 10px;Margin-top: 16px;font-size: 15px;line-height: 24px;font-family: "Lato",sans-serif;color: #60666d;text-align: left;'>
