--- a/app/views/application_mailer/booking_accepted__to_renter.html.erb
+++ b/app/views/application_mailer/booking_accepted__to_renter.html.erb
@@ -3,10 +3,10 @@
    rcpt_user    = @booking.user
 %>
 <p>
-  Hei, <%= rcpt_user.first_name %>
+  Hei, <%= rcpt_user.public_name %>
 </p>
 <p>
-  <%= link_to sender_user.first_name, user_url( sender_user ) %> har akseptert din forespørsel om å leie <%= link_to @booking.ad.title, ad_url( @booking.ad ) %>.
+  <%= link_to sender_user.public_name, user_url( sender_user ) %> har akseptert din forespørsel om å leie <%= link_to @booking.ad.title, ad_url( @booking.ad ) %>.
 </p>
 <table>
   <tr> <td>Fra:</td> <td><%= l @booking.starts_at, format: :shorter_datetime %></td> </tr>
@@ -25,7 +25,7 @@
 </p>
 
 <p>
-  Om du har spørsmål til <%= link_to @booking.from_user.first_name, user_url( @booking.from_user ) %> kan du kontakte han på telefonnummer <%= @booking.from_user.phone_number %>.
+  Om du har spørsmål til <%= link_to @booking.from_user.public_name, user_url( @booking.from_user ) %> kan du kontakte han på telefonnummer <%= @booking.from_user.phone_number %>.
 </p>
 
 <p>
