--- a/app/views/application_mailer/booking_ends_at_soon__to_owner.html.erb
+++ b/app/views/application_mailer/booking_ends_at_soon__to_owner.html.erb
@@ -3,10 +3,10 @@
    rcpt_user    = @booking.user
 %>
 <p>
-  Hei, <%= rcpt_user.first_name %>
+  Hei, <%= rcpt_user.public_name %>
 </p>
 <p>
-  Minner om at ditt leieforhold med <%= link_to sender_user.first_name, user_url( sender_user ) %> og <%= link_to @booking.ad.title, ad_url( @booking.ad ) %>  slutter om 12 timer.
+  Minner om at ditt leieforhold med <%= link_to sender_user.public_name, user_url( sender_user ) %> og <%= link_to @booking.ad.title, ad_url( @booking.ad ) %>  slutter om 12 timer.
 </p>
 <table>
   <tr> <td>Fra:</td> <td><%= l @booking.starts_at, format: :shorter_datetime %></td> </tr>
@@ -17,7 +17,7 @@
   Leveringsadresse: <%= @booking.ad.location.to_s_pretty %>
 </p>
 <p>
-  Om du har spørsmål til <%= link_to sender_user.first_name, user_url( sender_user ) %> kan du kontakte han på telefonnummer <%= sender_user.phone_number %>.
+  Om du har spørsmål til <%= link_to sender_user.public_name, user_url( sender_user ) %> kan du kontakte han på telefonnummer <%= sender_user.phone_number %>.
 </p>
 <p>
   Om uthellet skulle være ute må dere huske  å fylle ut <%= link_to 'skadeskjema', users_accident_reports_url %> innen 48 timer etter skaden har skjedd.
