--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -43,7 +43,7 @@
                     <div class="row">
                         <div class="one-third column">
                             <%= f.label :birthday, "Fødselsdato:" %>
-                            <%= f.date_select :birthday, start_year: 1900, class: 'u-full-width' %>
+                            <%= f.date_select :birthday, start_year: 110.years.ago.year, end_year: 18.years.ago.year, class: 'u-full-width' %>
                         </div>
                     </div>
 
