--- a/app/views/misc/about.html.erb
+++ b/app/views/misc/about.html.erb
@@ -56,3 +56,5 @@
         <%= link_to (image_tag "logos/mangopay_611x121.png", class: 'partner-box__logo'), 'https://www.mangopay.com/' %>
     </div>
 <% end %>
+
+<%= render partial: 'purechat' %>
