--- a/app/assets/stylesheets/user_payment_cards.scss
+++ b/app/assets/stylesheets/user_payment_cards.scss
@@ -1,3 +1,7 @@
-// Place all the styles related to the user_payment_cards controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.payment-card-item {
+
+    &__card-id {
+        padding-left: 12px;
+        padding-right: 12px;
+    }
+}
