--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -43,7 +43,21 @@
                     <div class="row">
                         <div class="one-third column">
                             <%= f.label :birthday, "Fødselsdato:" %>
-                            <%= f.date_select :birthday, start_year: 110.years.ago.year, end_year: 18.years.ago.year, class: 'u-full-width' %>
+                            <%= f.date_select :birthday, start_year: 18.years.ago.year, end_year: 110.years.ago.year, default: 18.years.ago.beginning_of_year, class: 'u-full-width' %>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="two-thirds column">
+                            <%= f.label :country_of_residence, 'Bosatt i:' %>
+                            <%= f.country_select( :country_of_residence, priority_countries: ['NO', 'SE', 'DK', 'FI', 'PL', 'DE'], format: :with_flag) %>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="two-thirds column">
+                            <%= f.label :nationality, 'Statsborgerskap:' %>
+                            <%= f.country_select( :nationality, priority_countries: ['NO', 'SE', 'DK', 'FI', 'PL', 'DE'], format: :with_flag) %>
                         </div>
                     </div>
 
@@ -53,7 +67,6 @@
                             <%= f.email_field :email, class: 'u-full-width'  %>
                         </div>
                     </div>
-
 
                     <div class="row">
                         <div class="one-third column">
