add but not yet use devise-async, so emails are send as background jobs

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -13,6 +13,10 @@
         <%= render partial: 'booking_summary' %>
     </div>
 
+    <% if current_user.owns_booking_item?(@booking) && @booking.ad.motor? && ( @booking.started? || @booking.in_progress? ) %>
+        <%= render partial: 'booking_deposit' %>
+    <% end %>
+
     <% if @booking.may_give_feedback? %>
         <div class="u-push-down">
             <%# FIXME: TODO runeh cond around has_provided_feedback %>
