Fix grammatical mistake

--- a/app/views/users/rental_history.html.erb
+++ b/app/views/users/rental_history.html.erb
@@ -10,7 +10,7 @@
 
              <% if @bookings.empty? %>
                  <p>
-                     Du har ingen gjennoførte utleieforhold ennå.
+                     Du har ingen gjennomførte utleieforhold ennå.
                  </p>
             <% else %>
                 <div>
