If req on sign up

--- a/app/views/users/_provider_signups.html.erb
+++ b/app/views/users/_provider_signups.html.erb
@@ -10,6 +10,6 @@
     <br>
     <br>
     <p>
-        Ved å opprette bruker aksepterer du <%= link_to 'brukervilkårene.', terms_path %>
+        Ved å opprette bruker aksepterer du <%= link_to 'brukervilkårene', terms_path %> og at all kommunikasjon med forsikringsselskapet kan foregå elektronisk.
     </p>
 </div>
