--- a/app/views/misc/about.html.erb
+++ b/app/views/misc/about.html.erb
@@ -21,17 +21,12 @@
 
 <%= render layout: 'gray_box', locals: {title: 'Bakgrunn'} do %>
     <p>
-        Vi som har startet Plendit er til daglig ansatte i FINN.no. Med hjelp
-        av FINNs innovasjonsprogram «Sandbox» har vi fått muligheten til å
-        utvikle plendit. FINN og Sandbox har støttet oss med infrastruktur,
-        utviklingsverktøy, markedsføring samt god støtte og sparring fra
-        kolleger.
+        Vi som har startet Plendit er til daglig ansatte i FINN.no. I begynnelsen 2015 ble FINN Torget gratis for privatannonsører, bare kort tid etter det lå det tusenvis annnonser ute hvor folk ønsket å leie ut tingene sine. FINN Torget er en tjeneste for kjøp og salg og er derfor ikke optimal for denne typen aktivitet. Det var rett og slett ikke trygt å leie ut til vilt fremmede mennesker uten noen form for sikkerhet. Det var åpenbart at folk ønsket en slik tjeneste, men hvordan kan man gjøre det trygt? Det var slik Plendit ble til, vi satte i gang med å utvikle en tjeneste der det skulle bli mulig å leie til og fra andre folk enkelt og trygt. Ved hjelp av avansert verifisering av alle brukere, sikker betaling og forsikring har Plendit.no blitt nettopp en slik tjeneste. 
+        Med hjelp av FINNs innovasjonsprogram «Sandbox» har vi fått muligheten til å utvikle Plendit. FINN og Sandbox har støttet oss med infrastruktur, utviklingsverktøy, markedsføring samt god støtte og sparring fra kolleger.
+        Plendit er ikke en del av FINNs merkevare og FINN har således ikke ansvar for tjenestens kvalitet eller innhold.
     </p>
 
-    <p>
-        Plendit er ikke en del av FINNs merkevare og FINN har således ikke
-        ansvar for tjenestens kvalitet eller innhold.
-    </p>
+    
 <% end %>
 
 <%= render layout: 'gray_box', locals: {title: 'Kontakt Plendit'} do %>
