Added purechat everywhere, remove intercom

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,5 +52,7 @@
             <%= render partial: 'main_footer' %>
         <% end %>
     <% end %>
+    
+    <%= render partial: 'purechat' %>
 </body>
 </html>
