Prosa update front page

--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -45,7 +45,7 @@
             <h2>Skadeforsikring fra If</h2>
             <p>
                 Slipp alle bekymringer. Alt du leier ut på Plendit blir
-                forsikret av If, ved skade har du som utleier ingen
+                forsikret av If og ved en skade har du som utleier ingen
                 egenandel.
                 <strong>
                     <%= link_to 'Les mer om forsikring', Rails.configuration.x.customerservice.insurance_info, target: '_blank' %>.
