--- a/app/views/users/finish_signup.html.erb
+++ b/app/views/users/finish_signup.html.erb
@@ -15,17 +15,17 @@
                 <% end %>
 
                 <div class="row">
-                    <%= f.label :email, 'E-post:' %>
-                    <div class="controls">
-                        <%= f.text_field :email, autofocus: true, required: true, class: 'form-control input-lg' %>
+                    <div class="two-thirds column">
+                        <%= f.label :email, 'E-post:', class: 'u-full-width' %>
+                        <%= f.text_field :email, autofocus: true, required: true, class: 'u-full-width' %>
                     </div>
                 </div>
 
                 <% if current_user.first_name.blank? %>
                     <div class="row">
                         <div class="two-thirds column">
-                            <%= f.label :first_name, 'Fornavn:' %>
-                            <%= f.text_field :first_name %>
+                            <%= f.label :first_name, 'Fornavn:', class: 'u-full-width' %>
+                            <%= f.text_field :first_name, class: 'u-full-width' %>
                         </div>
                     </div>
                 <% end %>
@@ -33,8 +33,8 @@
                 <% if current_user.last_name.blank? %>
                     <div class="row">
                         <div class="two-thirds column">
-                            <%= f.label :last_name, 'Etternavn:' %>
-                            <%= f.text_field :last_name %>
+                            <%= f.label :last_name, 'Etternavn:', class: 'u-full-width' %>
+                            <%= f.text_field :last_name, class: 'u-full-width' %>
                         </div>
                     </div>
                 <% end %>
@@ -42,7 +42,7 @@
                 <% if current_user.birthday.blank? %><%# current_user.has_confirmed_id? %>
                     <div class="row">
                         <div class="two-thirds column">
-                            <%= f.label :birthday, 'Fødselsdato:' %>
+                            <%= f.label :birthday, 'Fødselsdato:', class: 'u-full-width' %>
                             <%= f.date_select :birthday, start_year: 110.years.ago.year, end_year: 18.years.ago.year, disabled: @user.has_confirmed_id? %>
                         </div>
                     </div>
@@ -50,14 +50,14 @@
 
                 <div class="row">
                     <div class="two-thirds column">
-                        <%= f.label :country_of_residence, 'Bosatt i:' %>
+                        <%= f.label :country_of_residence, 'Bosatt i:', class: 'u-full-width' %>
                         <%= f.country_select( :country_of_residence, priority_countries: ['NO', 'SE', 'DK', 'FI', 'PL', 'DE'], format: :with_flag) %>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="two-thirds column">
-                        <%= f.label :nationality, 'Statsborgerskap:' %>
+                        <%= f.label :nationality, 'Statsborgerskap:', class: 'u-full-width' %>
                         <%= f.country_select( :nationality, priority_countries: ['NO', 'SE', 'DK', 'FI', 'PL', 'DE'], format: :with_flag) %>
                     </div>
                 </div>
