Paragraphs to achieve a more readable text, pluss some rephrasing

--- a/app/views/misc/about.html.erb
+++ b/app/views/misc/about.html.erb
@@ -21,8 +21,20 @@
 
 <%= render layout: 'gray_box', locals: {title: 'Bakgrunn'} do %>
     <p>
-        Vi som har startet Plendit er til daglig ansatte i FINN.no. I begynnelsen 2015 ble FINN Torget gratis for privatannonsører, bare kort tid etter det lå det tusenvis annnonser ute hvor folk ønsket å leie ut tingene sine. FINN Torget er en tjeneste for kjøp og salg og er derfor ikke optimal for denne typen aktivitet. Det var rett og slett ikke trygt å leie ut til vilt fremmede mennesker uten noen form for sikkerhet. Det var åpenbart at folk ønsket en slik tjeneste, men hvordan kan man gjøre det trygt? Det var slik Plendit ble til, vi satte i gang med å utvikle en tjeneste der det skulle bli mulig å leie til og fra andre folk enkelt og trygt. Ved hjelp av avansert verifisering av alle brukere, sikker betaling og forsikring har Plendit.no blitt nettopp en slik tjeneste. 
-        Med hjelp av FINNs innovasjonsprogram «Sandbox» har vi fått muligheten til å utvikle Plendit. FINN og Sandbox har støttet oss med infrastruktur, utviklingsverktøy, markedsføring samt god støtte og sparring fra kolleger.
+        Vi som har startet Plendit er til daglig ansatte i FINN.no. 
+        I 2014 ble FINN Torget gratis for privatannonsører, bare kort tid etter det lå det tusenvis annnonser ute der folk ønsket å leie ut tingene sine. 
+        FINN Torget er en tjeneste for kjøp og salg og er derfor ikke tilrettelagt for denne typen aktivitet. 
+        Det var rett og slett ikke trygt å leie ut eiendelene sine til vilt fremmede mennesker uten noen form for sikkerhet. 
+    </p>
+    
+     <p>
+        Det var åpenbart at brukere på FINN ønsket en slik tjeneste, men hvordan kan vi gjøre det trygt? 
+        Det var slik Plendit ble til! Vi satte i gang med å utvikle en tjeneste der utleie mellom folk ble både trygt og enkelt. 
+        Gjennom avansert verifisering av alle brukere, sikker betaling og forsikring har Plendit.no blitt nettopp en slik tjeneste. 
+    </p>  
+    
+    <p>
+        FINN og FINNs innovasjonsprogram «Sandbox» har bidratt med infrastruktur, utviklingsverktøy, markedsføring samt god støtte og sparring fra kolleger.
         Plendit er ikke en del av FINNs merkevare og FINN har således ikke ansvar for tjenestens kvalitet eller innhold.
     </p>
 
