correct some untrue statements regarding insurance

--- a/app/views/misc/about.html.erb
+++ b/app/views/misc/about.html.erb
@@ -1,15 +1,12 @@
 <%= render layout: 'gray_box', locals: {title: 'Om Plendit'} do %>
     <p>
-        Plendit, en forkortelse for «people lend it» er et nettsted der du enkelt
-        skal kunne leie til og fra privatpersoner og bedrifter.
+        Plendit, en forkortelse for «people lend it» er en tjeneste for utleie der det er trygt og enkelt å tjene penger på det man eier.
     </p>
 
     <p>
         Det er gratis å legge ut annonser, alle brukere blir verifisert og
-        betaling utføres trygt gjennom tjenesten. Plendit gir utleier en ekstra
-        sikkerhet ved å tilby skadeforsikring fra If. For å sikre en
-        god brukeropplevelse gir både utleier og leietaker hverandre en rating
-        av leieforholdet.
+        betaling utføres trygt gjennom tjenesten. Alt som leies ut på Plendit blir forsikret av If Skadeforsikring. For å sikre en
+        god brukeropplevelse gir både utleier og leietaker hverandre en rating etter leieforholdet er over.
     </p>
 <% end %>
 
